# MQTTuv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_run.sh  client_test.c  main.c  master.c  old_server.c  test.py  worker.c
sol/: sol.conf
src/: config.c  config.h  core.c  core.h  mqtt.c  network.c  network.h  server.c  server.h  sol.c  trie.h  util.c  util.h
tests/: CMakeLists.txt  test_con.py  test_discon.py  test_discon_adv.py  test_multi.py  test_pub.py  test_pub_sim.py  test_pubsub_multi.py  test_seperate.py  test_sub.py  test_sub_unsub.py  test_trie.c  test_unsub.py  test_unsub_threaded.py
